2001-10-02  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.override (_wrap_gtk_clist_new_with_titles): accept unicode
	objects as well.
	(_wrap_gtk_clist_prepend): likewise
	(_wrap_gtk_clist_append): likewise
	(_wrap_gtk_clist_insert): likewise
	(_wrap_gtk_combo_set_popdown_strings): likewise
	(_wrap_gtk_ctree_new_with_titles): likewise
	(_wrap_gtk_ctree_insert_node): likewise

2001-10-02  Johan Dahlin  <zilch.am@home.se>

	* gtk/gtk.defs: Added 
	GtkAccelLabel: get_accel_object, set_accel_object.
	GtkButton: set_label, get_label, set_use_underline,
	           get_use_underline, set_use_stock, get_use_stock.
	GtkLabel: get_attributes, set_label, get_label, set_use_markup,
	          get_use_markup, set_use_underline, get_use_underline,
	          get_justify
	GtkRadioButton: get_group
	GtkSpinButton: get_digits, get_increments, get_range,
	               get_update_policy, get_numeric, get_wrap,
		       get_snap_to_tickets, get_mode

2001-10-01  Matt Wilson  <msw@redhat.com>

	* codegen/codegen.py (write_boxed_getattr): added code to write
	out __members__ attribute so that dir(foo) works on boxed types

2001-10-01  Matthew Wilson  <msw@redhat.com>

	* examples/pygtk-demo/demos/treemodel.py
	(MyTreeModel.on_get_column_type): use gobject.TYPE_STRING instead
	of hard coded values

2001-09-30  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pygobject_dealloc): use plain old
	PyObject_GC_Del, as the overridden tp_free seems to ignore the GC
	header.
	(pygobject_new): GC track wrappers created through pygobject_new.

	* configure.in: increment version number, and require gtk 1.3.9
	(we already required it before).

	* gobjectmodule.c (pygobject_new): initialise extra members.
	Problem found by msw.

2001-09-29  Matthew Wilson  <msw@redhat.com>

	* examples/pygtk-demo/demos/dnd.py: port to new namespace

2001-09-29  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pyg_param_spec_new): add a wrapper for a