@@ -1,3 +1,9 @@
+2001-10-02  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c (pygobject_new): fix bug where we were INCREFing
+	the saved widget even in the hasref case (where we should be
+	passing ownership of the last reference).
+
 2001-10-02  Matt Wilson  <msw@redhat.com>
 
 	* gtk/gtk.override (_wrap_gtk_clist_new_with_titles): accept unicode
